infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: paribucase.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paribuhub-case-backend
                port:
                  number: 3000
